--- a/maryana.html
+++ b/maryana.html
@@ -6,7 +6,7 @@
 
 <body>
 <a  href="https://www.linkedin.com/in/maryana-alhawamdah-066a56279/">Maryana Al hawamdah</a>
-
+ <img src="Maryana.jpeg" alt="Maryana" width="200"  height="200" >
 </body>
 
 </html>
